add get all and get by id routes
