# routes/productRoutes.go
@@ -9,4 +9,6 @@ func productRoutes(router *gin.RouterGroup) {
 	productController := controllers.NewProductController()
 
 	router.POST("/", productController.CreateProductHandler)
+	router.GET("/", productController.ListProductsHandler)
+	router.GET("/:id", productController.FindProductByIdHandler)
 }
